Changes to path, line path, exploration. Much better, still needs work. Some bugs